k8s/networkpolicies/backend/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: backend   
spec:
  podSelector: {}      
  policyTypes:
    - Ingress
    - Egress
